# all_web

./: .gitignore  API_DOCUMENTATION.md  ARCHITECTURE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DIAGRAMS.md  Frontend_Integration_Guide.md  PROJECT_KICKOFF.md  README.md  TECH_STACK.md  api_endpoints_and_redis_integration.md  django_project_structure.md  ls_command.txt  model_implementations.md  package-lock.json  project_requirements.md  task_breakdown.md  testing_and_deployment_guide.md
freelance_platform/: .env.docker  .env.example  .gitignore  ADMIN_FIX_SUMMARY.md  DATABASE_IMPLEMENTATION_GUIDE.md  DEVELOPMENT_SUMMARY.md  Dockerfile  GIG_MANAGEMENT_SUMMARY.md  MESSAGING_REVIEWS_SUMMARY.md  ORDER_MANAGEMENT_SUMMARY.md  README.md  README_POSTGRESQL.md  SETUP_COMPLETE.md  SOCIAL_AUTH_GUIDE.md  SOCIAL_AUTH_SUMMARY.md  compile_translations.py  create_gig_categories.py  create_simple_test_data.py  create_test_data.py  docker-compose.yml  init-db.sql  main.py  pyproject.toml  requirements.txt  setup.sh  test_gig_system.py  test_messaging_reviews.py  test_order_system.py  test_social_auth.py
freelance_platform/apps/accounts/: admin.py  admin_social.py  exceptions.py  middleware.py  models.py  models_social.py  permissions.py  phone_verification.py  serializers_social.py  social_auth_flows.py  urls.py  urls_social.py  views_social.py
freelance_platform/apps/common/: models.py
freelance_platform/apps/gigs/: admin.py  (+5 more)
freelance_platform/config/: celery.py  database_optimization.py  monitoring.py  settings.py  urls.py
freelance_platform/migrations/: initial_optimization.sql
(+233 files in other folders)
